--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8>
-  <title>Movie Search</title>
+  <title>Super Movie Search!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
   </div>
   <div class="content">
     <h1>Super Movie Search</h1>
-      <div class="results"></div>
-      <div class="movie-detail"></div>
+    <div class="results"></div>
+    <div class="movie-detail"></div>
   </div>
   </div>
 <!--   <form>
